* Whitebox.getMethod(..) sets the accessable flag to true if a method is found.
* Fixed a bug in WhiteboxImpl.checkIfTypesAreSame(..) that prevented classes to be identified correctly.
* Fixed a bug in the PowerMockJUnit44RunnerDelegateImpl that caused a NoClassDefFoundError to be thrown when using JUnit 4.5 when a AssumptionViolatedException was thrown. The reason for this was that JUnit has changed to locatation of this exception.

Change log 1.0 (released 2008-11-18)
------------------------------------
* Changed the pom.xml for the tutorial project so that it's now a stand-alone project.
* Fixed so that replay all and verify all also works for createMockAndExpectNew.
* Added method createStrictMockAndExpectNew and createNiceMockAndExpectNew
* Fixed so that suppressMethodCode returns an empty string for methods returning String. 
* Fixed a bug in the byte-code manipulation of constructors, modifiers that doesn't need change are now preserved.
* Added the PrepareEverythingForTestAnnotation, this annotation can be used to tell PowerMock to modify all classes.
* MockGateway doMethodCall now also supports java proxy types.
* Implemented the ability to set and get internal state based on field type. This means that you get more refactor friendly code while still being able to set or get internal state.
* Implemented the ability to set internal state based on an object type, i.e. you can now do setInternalState(object, myServiceImpl) to set the first field in object which can be assignable to myServiceImpl. This means that you get more refactor friendly code while still being able to set internal state.
* Get and setInternalState now separates between class and instance fields, i.e. you cannot set static fields by specifying an instance object.
* Updated the tutorial projects to take advantage of the latest features in PowerMock.
* Fixed a NPE bug in the AbstractTestClassExtractor.isPrepared(..) method.